--- a/manifest.json
+++ b/manifest.json
@@ -22,10 +22,7 @@
 		"bin-debug/socket/protocol/DefaultHeader.js",
 		"bin-debug/ui/HGroup.js",
 		"bin-debug/view/BaseScene.js",
-		"bin-debug/socket/PacketFactory.js",
-		"bin-debug/astar/BinaryHeap.js",
-		"bin-debug/astar/Grid.js",
-		"bin-debug/astar/Link.js",
+		"bin-debug/socket/WebSocket.js",
 		"bin-debug/astar/Node.js",
 		"bin-debug/common/BezierUtil.js",
 		"bin-debug/common/FlippingCard.js",
@@ -45,11 +42,11 @@
 		"bin-debug/Main.js",
 		"bin-debug/layout/ListGroup.js",
 		"bin-debug/layout/ListItem.js",
-		"bin-debug/animate/AnimateData.js",
+		"bin-debug/animation/ImageAnimation.js",
 		"bin-debug/layout/ScrollBar.js",
 		"bin-debug/layout/SliderBar.js",
 		"bin-debug/loader/HttpLoader.js",
-		"bin-debug/animate/AnimateManager.js",
+		"bin-debug/animation/ParticleUtil.js",
 		"bin-debug/loader/ResLoader.js",
 		"bin-debug/msghandle/BaseHandle.js",
 		"bin-debug/msghandle/IHandle.js",
@@ -62,21 +59,22 @@
 		"bin-debug/p2/P2SpaceUtil.js",
 		"bin-debug/p2/SimpleP2Scene.js",
 		"bin-debug/p2/VehicleSteeringCtrl.js",
+		"bin-debug/socket/PacketFactory.js",
 		"bin-debug/LoadingUI.js",
-		"bin-debug/socket/WebSocket.js",
 		"bin-debug/socket/io/DefaultDecoder.js",
 		"bin-debug/socket/io/DefaultEncoder.js",
 		"bin-debug/socket/io/IDecoder.js",
 		"bin-debug/socket/io/IEncoder.js",
 		"bin-debug/socket/protocol/BaseEntity.js",
-		"bin-debug/animate/AnimateTexture.js",
+		"bin-debug/animation/SkeletonUtil.js",
 		"bin-debug/socket/protocol/IHeader.js",
 		"bin-debug/socket/protocol/Packet.js",
+		"bin-debug/sound/Sound.js",
 		"bin-debug/sound/SoundManager.js",
-		"bin-debug/animation/ImageAnimation.js",
+		"bin-debug/astar/AStar.js",
 		"bin-debug/ui/Button.js",
-		"bin-debug/animation/ParticleUtil.js",
-		"bin-debug/animation/SkeletonUtil.js",
+		"bin-debug/astar/BinaryHeap.js",
+		"bin-debug/astar/Grid.js",
 		"bin-debug/ui/Image.js",
 		"bin-debug/ui/ImageNumber.js",
 		"bin-debug/ui/Label.js",
@@ -98,17 +96,15 @@
 		"bin-debug/util/HeartBeat.js",
 		"bin-debug/util/HexUtil.js",
 		"bin-debug/util/LocalStorage.js",
+		"bin-debug/util/MapUtil.js",
 		"bin-debug/util/MathUtil.js",
 		"bin-debug/util/md5.js",
 		"bin-debug/util/MoreTouch.js",
-		"bin-debug/util/Sound.js",
-		"bin-debug/util/StorageMap.js",
 		"bin-debug/util/StringUtil.js",
-		"bin-debug/util/WebScoketManager.js",
 		"bin-debug/video/EgretVideo.js",
 		"bin-debug/video/NativeVideo.js",
 		"bin-debug/video/VideoBox.js",
-		"bin-debug/astar/AStar.js",
+		"bin-debug/astar/Link.js",
 		"bin-debug/view/MainScene.js",
 		"bin-debug/view/SceneManager.js"
 	]
