--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
 		"bin-debug/socket/protocol/DefaultHeader.js",
 		"bin-debug/ui/HGroup.js",
 		"bin-debug/view/BaseScene.js",
-		"bin-debug/socket/PacketFactory.js",
+		"bin-debug/p2/VehicleSteeringCtrl.js",
 		"bin-debug/astar/Node.js",
 		"bin-debug/common/BezierUtil.js",
 		"bin-debug/common/FlippingCard.js",
@@ -41,6 +41,9 @@
 		"bin-debug/effect/EffectData.js",
 		"bin-debug/effect/EffectUtil.js",
 		"bin-debug/effect/TweenEffect.js",
+		"bin-debug/egretExt/EgretProto.js",
+		"bin-debug/egretExt/FairyGUIProto.js",
+		"bin-debug/egretExt/RES.js",
 		"bin-debug/event/EventManager.js",
 		"bin-debug/event/EventType.js",
 		"bin-debug/event/MyEvent.js",
@@ -58,8 +61,8 @@
 		"bin-debug/p2/P2MouseJointHelper.js",
 		"bin-debug/p2/P2SpaceUtil.js",
 		"bin-debug/p2/SimpleP2Scene.js",
-		"bin-debug/p2/VehicleSteeringCtrl.js",
 		"bin-debug/LoadingUI.js",
+		"bin-debug/socket/PacketFactory.js",
 		"bin-debug/socket/WebSocket.js",
 		"bin-debug/socket/io/DefaultDecoder.js",
 		"bin-debug/socket/io/DefaultEncoder.js",
