--- a/manifest.json
+++ b/manifest.json
@@ -14,32 +14,51 @@
 		"libs/modules/promise/promise.js"
 	],
 	"game": [
+		"bin-debug/basicUI/BasicGroup.js",
+		"bin-debug/basicUI/Button.js",
 		"bin-debug/spine/core/Utils.js",
-		"bin-debug/ui/BaseGroup.js",
+		"bin-debug/basicUI/CheckBox.js",
+		"bin-debug/basicUI/Group.js",
 		"bin-debug/spine/core/ConstraintData.js",
-		"bin-debug/component/BasicLayout.js",
 		"bin-debug/spine/core/Triangulator.js",
-		"bin-debug/ui/Group.js",
-		"bin-debug/spine/core/PathConstraintData.js",
+		"bin-debug/spine/core/Animation.js",
+		"bin-debug/basicUI/RadioButton.js",
+		"bin-debug/loader/Loader.js",
+		"bin-debug/socket/protocol/DefaultHeader.js",
+		"bin-debug/basicUI/DefaultRenderer.js",
 		"bin-debug/spine/core/BlendMode.js",
 		"bin-debug/spine/core/BoneData.js",
 		"bin-debug/view/BaseScene.js",
-		"bin-debug/component/DefaultRenderer.js",
+		"bin-debug/spine/core/PathConstraintData.js",
 		"bin-debug/spine/core/SkeletonClipping.js",
 		"bin-debug/spine/core/Texture.js",
-		"bin-debug/component/Progress.js",
-		"bin-debug/loader/Loader.js",
+		"bin-debug/basicUI/HGroup.js",
+		"bin-debug/basicUI/Progress.js",
 		"bin-debug/spine/core/attachments/Attachment.js",
 		"bin-debug/spine/impl/EventEmitter.js",
-		"bin-debug/socket/protocol/DefaultHeader.js",
-		"bin-debug/spine/core/Animation.js",
-		"bin-debug/ui/HGroup.js",
-		"bin-debug/spine/core/IkConstraint.js",
-		"bin-debug/component/Layout.js",
+		"bin-debug/socket/protocol/BaseEntity.js",
+		"bin-debug/basicUI/Layout.js",
+		"bin-debug/basicUI/List.js",
+		"bin-debug/basicUI/ListAd.js",
+		"bin-debug/astar/AStar.js",
+		"bin-debug/astar/BinaryHeap.js",
+		"bin-debug/basicUI/ScrollGroup.js",
+		"bin-debug/basicUI/Slider.js",
+		"bin-debug/basicUI/Style.js",
+		"bin-debug/basicUI/TabBar.js",
+		"bin-debug/basicUI/TextArea.js",
+		"bin-debug/basicUI/TextInput.js",
+		"bin-debug/basicUI/UIColor.js",
+		"bin-debug/basicUI/UICreator.js",
+		"bin-debug/basicUI/UISkin.js",
+		"bin-debug/common/BezierUtil.js",
+		"bin-debug/common/FlippingCard.js",
+		"bin-debug/common/GameData.js",
+		"bin-debug/common/MaskEraser.js",
+		"bin-debug/common/ObjectPool.js",
+		"bin-debug/common/ScreenSwitch.js",
 		"bin-debug/component/ListGroup.js",
-		"bin-debug/animation/ImageAnimation.js",
 		"bin-debug/component/Scroller.js",
-		"bin-debug/component/Slider.js",
 		"bin-debug/effect/EffectData.js",
 		"bin-debug/effect/EffectUtil.js",
 		"bin-debug/effect/TweenEffect.js",
@@ -50,7 +69,7 @@
 		"bin-debug/event/EventType.js",
 		"bin-debug/event/MyEvent.js",
 		"bin-debug/loader/HttpLoader.js",
-		"bin-debug/animation/ParticleUtil.js",
+		"bin-debug/astar/Grid.js",
 		"bin-debug/loader/ResLoader.js",
 		"bin-debug/loader/ResManager.js",
 		"bin-debug/msghandle/BaseHandle.js",
@@ -70,47 +89,47 @@
 		"bin-debug/socket/io/DefaultEncoder.js",
 		"bin-debug/socket/io/IDecoder.js",
 		"bin-debug/socket/io/IEncoder.js",
-		"bin-debug/socket/protocol/BaseEntity.js",
-		"bin-debug/animation/Skeleton.js",
+		"bin-debug/LoadingUI.js",
+		"bin-debug/astar/Link.js",
 		"bin-debug/socket/protocol/IHeader.js",
 		"bin-debug/socket/protocol/Packet.js",
 		"bin-debug/sound/Sound.js",
 		"bin-debug/sound/SoundManager.js",
-		"bin-debug/animation/SkeletonUtil.js",
+		"bin-debug/astar/Node.js",
 		"bin-debug/spine/core/AnimationState.js",
 		"bin-debug/spine/core/AnimationStateData.js",
 		"bin-debug/spine/core/AssetManager.js",
 		"bin-debug/spine/core/AtlasAttachmentLoader.js",
-		"bin-debug/astar/AStar.js",
+		"bin-debug/ListItemRenderer.js",
 		"bin-debug/spine/core/Bone.js",
-		"bin-debug/astar/BinaryHeap.js",
-		"bin-debug/astar/Grid.js",
+		"bin-debug/basicUI/BasicUIEvent.js",
+		"bin-debug/Main.js",
 		"bin-debug/spine/core/Event.js",
 		"bin-debug/spine/core/EventData.js",
-		"bin-debug/LoadingUI.js",
+		"bin-debug/spine/core/IkConstraint.js",
 		"bin-debug/spine/core/IkConstraintData.js",
 		"bin-debug/spine/core/PathConstraint.js",
-		"bin-debug/astar/Link.js",
+		"bin-debug/animation/ImageAnimation.js",
 		"bin-debug/spine/core/polyfills.js",
 		"bin-debug/spine/core/SharedAssetManager.js",
 		"bin-debug/spine/core/Skeleton.js",
 		"bin-debug/spine/core/SkeletonBinary.js",
 		"bin-debug/spine/core/SkeletonBounds.js",
-		"bin-debug/astar/Node.js",
+		"bin-debug/animation/ParticleUtil.js",
 		"bin-debug/spine/core/SkeletonData.js",
 		"bin-debug/spine/core/SkeletonJson.js",
 		"bin-debug/spine/core/Skin.js",
 		"bin-debug/spine/core/Slot.js",
 		"bin-debug/spine/core/SlotData.js",
-		"bin-debug/common/BezierUtil.js",
+		"bin-debug/animation/Skeleton.js",
 		"bin-debug/spine/core/TextureAtlas.js",
 		"bin-debug/spine/core/TransformConstraint.js",
 		"bin-debug/spine/core/TransformConstraintData.js",
-		"bin-debug/common/FlippingCard.js",
+		"bin-debug/animation/SkeletonUtil.js",
 		"bin-debug/spine/core/Updatable.js",
-		"bin-debug/common/GameData.js",
+		"bin-debug/basicUI/Image.js",
 		"bin-debug/spine/core/VertexEffect.js",
-		"bin-debug/common/GameDispatcher.js",
+		"bin-debug/basicUI/ImageNumber.js",
 		"bin-debug/spine/core/attachments/AttachmentLoader.js",
 		"bin-debug/spine/core/attachments/AttachmentType.js",
 		"bin-debug/spine/core/attachments/BoundingBoxAttachment.js",
@@ -121,26 +140,11 @@
 		"bin-debug/spine/core/attachments/RegionAttachment.js",
 		"bin-debug/spine/core/vertexeffects/JitterEffect.js",
 		"bin-debug/spine/core/vertexeffects/SwirlEffect.js",
-		"bin-debug/common/MaskEraser.js",
+		"bin-debug/basicUI/Label.js",
 		"bin-debug/spine/impl/Map.js",
 		"bin-debug/spine/impl/SkeletonAnimation.js",
 		"bin-debug/spine/impl/SkeletonRenderer.js",
 		"bin-debug/spine/impl/Track.js",
-		"bin-debug/common/ObjectPool.js",
-		"bin-debug/ui/Button.js",
-		"bin-debug/common/ScreenSwitch.js",
-		"bin-debug/ListItemRenderer.js",
-		"bin-debug/ui/Image.js",
-		"bin-debug/ui/ImageNumber.js",
-		"bin-debug/ui/Label.js",
-		"bin-debug/ui/LabelImage.js",
-		"bin-debug/ui/List.js",
-		"bin-debug/ui/ListAd.js",
-		"bin-debug/ui/ScrollGroup.js",
-		"bin-debug/ui/Style.js",
-		"bin-debug/ui/TextArea.js",
-		"bin-debug/ui/TextInput.js",
-		"bin-debug/ui/UICreator.js",
 		"bin-debug/util/Base64Util.js",
 		"bin-debug/util/Debug.js",
 		"bin-debug/util/FilterUtil.js",
@@ -158,7 +162,7 @@
 		"bin-debug/video/EgretVideo.js",
 		"bin-debug/video/NativeVideo.js",
 		"bin-debug/video/VideoBox.js",
-		"bin-debug/Main.js",
+		"bin-debug/basicUI/LabelImage.js",
 		"bin-debug/view/MainScene.js",
 		"bin-debug/view/SceneManager.js"
 	]
